tests/envoy_xds_expectations/actual_output_getProbeCluster.yaml
connect_timeout: 1s
lb_policy: ROUND_ROBIN
load_assignment:
  cluster_name: cluster-name
  endpoints:
  - lb_endpoints:
    - endpoint:
        address:
          socket_address:
            address: 127.0.0.1
            port_value: 12341234
name: cluster-name
type: STATIC
