tests/envoy_xds_expectations/expected_output_getHTTPAccessLog.yaml
name: envoy.access_loggers.file
typed_config:
  '@type': type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
  log_format:
    json_format:
      authority: '%REQ(:AUTHORITY)%'
      bytes_received: '%BYTES_RECEIVED%'
      bytes_sent: '%BYTES_SENT%'
      duration: '%DURATION%'
      method: '%REQ(:METHOD)%'
      path: '%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%'
      protocol: '%PROTOCOL%'
      request_id: '%REQ(X-REQUEST-ID)%'
      requested_server_name: '%REQUESTED_SERVER_NAME%'
      response_code: '%RESPONSE_CODE%'
      response_code_details: '%RESPONSE_CODE_DETAILS%'
      response_flags: '%RESPONSE_FLAGS%'
      start_time: '%START_TIME%'
      time_to_first_byte: '%RESPONSE_DURATION%'
      upstream_cluster: '%UPSTREAM_CLUSTER%'
      upstream_host: '%UPSTREAM_HOST%'
      upstream_service_time: '%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%'
      user_agent: '%REQ(USER-AGENT)%'
      x_forwarded_for: '%REQ(X-FORWARDED-FOR)%'
