tests/envoy_xds_expectations/expected_output_getLivenessCluster.yaml
connect_timeout: 1s
load_assignment:
  cluster_name: liveness_cluster
  endpoints:
  - lb_endpoints:
    - endpoint:
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 81
name: liveness_cluster
type: STATIC
