tests/envoy_xds_expectations/expected_output_getLivenessListenerNonHTTP.yaml
address:
  socket_address:
    address: 0.0.0.0
    port_value: 15901
filter_chains:
- filters:
  - name: tcp_proxy
    typed_config:
      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
      access_log:
      - name: envoy.access_loggers.stream
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          log_format:
            json_format:
              bytes_received: '%BYTES_RECEIVED%'
              bytes_sent: '%BYTES_SENT%'
              duration: '%DURATION%'
              requested_server_name: '%REQUESTED_SERVER_NAME%'
              response_flags: '%RESPONSE_FLAGS%'
              start_time: '%START_TIME%'
              upstream_cluster: '%UPSTREAM_CLUSTER%'
              upstream_host: '%UPSTREAM_HOST%'
      cluster: my-container_liveness_cluster
      stat_prefix: health_probes
name: liveness_listener
