tests/envoy_xds_expectations/expected_output_getStartupCluster.yaml
connect_timeout: 1s
load_assignment:
  cluster_name: startup_cluster
  endpoints:
  - lb_endpoints:
    - endpoint:
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 83
name: startup_cluster
type: STATIC
