tests/envoy_xds_expectations/expected_output_getStartupListener.yaml
address:
  socket_address:
    address: 0.0.0.0
    port_value: 15903
filter_chains:
- filters:
  - name: envoy.filters.network.http_connection_manager
    typed_config:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      access_log:
      - name: envoy.access_loggers.stream
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          log_format:
            json_format:
              authority: '%REQ(:AUTHORITY)%'
              bytes_received: '%BYTES_RECEIVED%'
              bytes_sent: '%BYTES_SENT%'
              duration: '%DURATION%'
              method: '%REQ(:METHOD)%'
              path: '%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%'
              protocol: '%PROTOCOL%'
              request_id: '%REQ(X-REQUEST-ID)%'
              requested_server_name: '%REQUESTED_SERVER_NAME%'
              response_code: '%RESPONSE_CODE%'
              response_code_details: '%RESPONSE_CODE_DETAILS%'
              response_flags: '%RESPONSE_FLAGS%'
              start_time: '%START_TIME%'
              time_to_first_byte: '%RESPONSE_DURATION%'
              upstream_cluster: '%UPSTREAM_CLUSTER%'
              upstream_host: '%UPSTREAM_HOST%'
              upstream_service_time: '%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%'
              user_agent: '%REQ(USER-AGENT)%'
              x_forwarded_for: '%REQ(X-FORWARDED-FOR)%'
      http_filters:
      - name: envoy.filters.http.router
      route_config:
        name: local_route
        virtual_hosts:
        - domains:
          - '*'
          name: local_service
          routes:
          - match:
              prefix: /osm-startup-probe
            route:
              cluster: startup_cluster
              prefix_rewrite: /startup
      stat_prefix: health_probes_http
name: startup_listener
