tests/envoy_xds_expectations/expected_output_getVirtualHosts.yaml
domains:
- '*'
name: local_service
routes:
- match:
    prefix: /some/path
  route:
    cluster: -cluster-name-
    prefix_rewrite: /original/probe/path
